--- a/MQTT/example_site.html
+++ b/MQTT/example_site.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>test Ws mqtt.js</title>
+  <title>MQTT 測試網站</title>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
 <body>
