--- a/MQTT/example_site.html
+++ b/MQTT/example_site.html
@@ -1,11 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>MQTT 測試網站</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MQTT 測試</title>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
 <body>
 <div class="msg-text"></div>
-<script>
+<script lang="javascript">
   var client = mqtt.connect("ws://test.mosquitto.org:8080")
   client.on('connect', ()=>
     {
@@ -14,12 +18,12 @@
         client.on("message", function (topic, payload) {
         //console.log(payload);
         var msgText = document.getElementsByClassName('msg-text')[0];
-        msgText.innerHTML = msgText.innerHTML+payload.toString()+"<br>";
+        msgText.innerHTML = msgText.innerHTML+"<li>"+payload.toString()+"</li>"+"<br>";
         console.log([topic, payload].join(": "));
         // client.end()
         });
 
-        client.publish("NCUEMQTT", "hello");  
+        //client.publish("NCUEMQTT", "hello");  
     }
   );
 </script>
